[package]
name = "csee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.32"
features = ["full"]

[dependencies.nix]
version = "0.27"
features = ["sched"]

[dependencies]
anyhow = "1.0"